--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "chrome-extension-boilerplate-react",
-  "version": "5.0.4",
+  "version": "5.0.4-p1",
   "description": "A chrome extension boilerplate built with React 18, Webpack 5, and Webpack Dev Server 4",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/lxieyang/chrome-extension-boilerplate-react.git"
+    "url": "https://github.com/phucbm/chrome-extension-boilerplate-react.git"
   },
   "scripts": {
     "build": "node utils/build.js",
